--- a/style.css
+++ b/style.css
@@ -51,3 +51,43 @@ video {
     border-radius: 50%;
 
 }
+.scale-record {
+    animation-name: scale-record;
+    animation-iteration-count: infinite;
+    animation-duration: 1s;
+}
+.scale-capture {
+    animation-name: scale-capture;
+    animation-iteration-count: infinite;
+    animation-duration: 1s;
+}
+@keyframes scale-record {
+    0% {
+        transform: scale(0.8);
+
+    }
+    100% {
+        transform: scale(1.1);
+
+    }
+}
+@keyframes scale-capture {
+    0% {
+        transform: scale(0.8);
+
+    }
+    100% {
+        transform: scale(1.1);
+
+    }
+}
+.timer-cont {
+    position: absolute;
+    bottom: 10rem;
+    left: 5rem;
+    background-color: aqua;
+    font-size: 0.8rem;
+}
+.timer {
+    display: none;
+}
